docs/versions/7.0.0/rules/lib/overview.mdx
<html devsite>
<head>
  <meta name="project_path" value="/_project.yaml">
  <meta name="book_path" value="/versions/7.0.0/_book.yaml">
</head>
<body>
<h1 class="page-title">One-Page Overview</h1>

{% dynamic setvar source_file "src/main/java/com/google/devtools/build/docgen/templates/starlark-overview.vm" %}
{% dynamic setvar version "7.0.0" %}
{% dynamic setvar original_path "/rules/lib/overview" %}
{% include "_buttons.html" %}
<h2>


  <a href="/versions/7.0.0/rules/lib/globals">Global functions</a>


</h2>
<ul>

  <li>


    <a href="/versions/7.0.0/rules/lib/globals/bzl">.bzl files</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/globals/all">All Bazel files</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/globals/build">BUILD files</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/globals/module">MODULE.bazel files</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/globals/workspace">WORKSPACE files</a>

  </li>

</ul>
<h2>


  <a href="/versions/7.0.0/rules/lib/fragments">Configuration Fragments</a>


</h2>
<ul>

  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/apple">apple</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/bazel_android">bazel_android</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/bazel_py">bazel_py</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/coverage">coverage</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/cpp">cpp</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/j2objc">j2objc</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/java">java</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/objc">objc</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/platform">platform</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/proto">proto</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/py">py</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/fragments/swift">swift</a>

  </li>

</ul>
<h2>


  <a href="/versions/7.0.0/rules/lib/providers">Providers</a>


</h2>
<ul>

  <li>


    <a href="/versions/7.0.0/rules/lib/providers/AnalysisTestResultInfo">AnalysisTestResultInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/AndroidNeverLinkLibrariesProvider">AndroidNeverLinkLibrariesProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/AppleDebugOutputs">AppleDebugOutputs</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/AppleDynamicFramework">AppleDynamicFramework</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/AppleExecutableBinary">AppleExecutableBinary</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/BaselineProfileProvider">BaselineProfileProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/CcInfo">CcInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/CcToolchainConfigInfo">CcToolchainConfigInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/CcToolchainInfo">CcToolchainInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ConstraintCollection">ConstraintCollection</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ConstraintSettingInfo">ConstraintSettingInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ConstraintValueInfo">ConstraintValueInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/DebugPackageInfo">DebugPackageInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/DefaultInfo">DefaultInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ExecutionInfo">ExecutionInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/FeatureFlagInfo">FeatureFlagInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/file_provider">file_provider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/FilesToRunProvider">FilesToRunProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/GeneratedExtensionRegistryProvider">GeneratedExtensionRegistryProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/IncompatiblePlatformProvider">IncompatiblePlatformProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/InstrumentedFilesInfo">InstrumentedFilesInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/java_compilation_info">java_compilation_info</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/java_output_jars">java_output_jars</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/JavaRuntimeInfo">JavaRuntimeInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/JavaToolchainInfo">JavaToolchainInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ObjcProvider">ObjcProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/OutputGroupInfo">OutputGroupInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/PackageSpecificationInfo">PackageSpecificationInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/PlatformInfo">PlatformInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ProguardSpecProvider">ProguardSpecProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ProtoRegistryProvider">ProtoRegistryProvider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/PyInfo">PyInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/PyRuntimeInfo">PyRuntimeInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/RunEnvironmentInfo">RunEnvironmentInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/TemplateVariableInfo">TemplateVariableInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ToolchainInfo">ToolchainInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/ToolchainTypeInfo">ToolchainTypeInfo</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/XcodeProperties">XcodeProperties</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/providers/XcodeVersionConfig">XcodeVersionConfig</a>

  </li>

</ul>
<h2>


  <a href="/versions/7.0.0/rules/lib/builtins">Built-in Types</a>


</h2>
<ul>

  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Action">Action</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/actions">actions</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/apple_platform">apple_platform</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/apple_platform_type">apple_platform_type</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/apple_toolchain">apple_toolchain</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Args">Args</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Aspect">Aspect</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Attribute">Attribute</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/bazel_module">bazel_module</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/bazel_module_tags">bazel_module_tags</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/BuildSetting">BuildSetting</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/CcCompilationOutputs">CcCompilationOutputs</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/CcLinkingOutputs">CcLinkingOutputs</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/CompilationContext">CompilationContext</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/configuration">configuration</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/ctx">ctx</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/depset">depset</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/DirectoryExpander">DirectoryExpander</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/DottedVersion">DottedVersion</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/exec_result">exec_result</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/ExecGroupCollection">ExecGroupCollection</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/ExecGroupContext">ExecGroupContext</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/ExecTransitionFactory">ExecTransitionFactory</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/extension_metadata">extension_metadata</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/FeatureConfiguration">FeatureConfiguration</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/File">File</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/fragments">fragments</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/java_annotation_processing">java_annotation_processing</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Label">Label</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/LateBoundDefault">LateBoundDefault</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/LibraryToLink">LibraryToLink</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/License">License</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/LinkerInput">LinkerInput</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/LinkingContext">LinkingContext</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/module_ctx">module_ctx</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/native_rule_transition">native_rule_transition</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/path">path</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Provider">Provider</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/repository_ctx">repository_ctx</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/repository_os">repository_os</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/repository_rule">repository_rule</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/root">root</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/rule">rule</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/rule_attributes">rule_attributes</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/runfiles">runfiles</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/struct">struct</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Subrule">Subrule</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/subrule_ctx">subrule_ctx</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/SymlinkEntry">SymlinkEntry</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/tag_class">tag_class</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/Target">Target</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/TemplateDict">TemplateDict</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/toolchain_type">toolchain_type</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/ToolchainContext">ToolchainContext</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/builtins/transition">transition</a>

  </li>

</ul>
<h2>


  <a href="/versions/7.0.0/rules/lib/toplevel">Top-level Modules</a>


</h2>
<ul>

  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/apple_common">apple_common</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/attr">attr</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/cc_common">cc_common</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/config">config</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/config_common">config_common</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/coverage_common">coverage_common</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/java_common">java_common</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/native">native</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/platform_common">platform_common</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/proto">proto</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/proto_common">proto_common</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/toplevel/testing">testing</a>

  </li>

</ul>
<h2>


  <a href="/versions/7.0.0/rules/lib/core">Core Starlark data types</a>


</h2>
<ul>

  <li>


    <a href="/versions/7.0.0/rules/lib/core/bool">bool</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/builtin_function_or_method">builtin_function_or_method</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/dict">dict</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/float">float</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/function">function</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/int">int</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/json">json</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/list">list</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/range">range</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/string">string</a>

  </li>


  <li>


    <a href="/versions/7.0.0/rules/lib/core/tuple">tuple</a>

  </li>

</ul>
</body>
</html>
