docs/versions/8.6.0/rules/lib/overview.mdx
---
title: 'One-Page Overview'
---

## [Global functions](/versions/8.6.0/rules/lib/globals)

* [.bzl files](/versions/8.6.0/rules/lib/globals/bzl)
* [All Bazel files](/versions/8.6.0/rules/lib/globals/all)
* [BUILD files](/versions/8.6.0/rules/lib/globals/build)
* [MODULE.bazel files](/versions/8.6.0/rules/lib/globals/module)
* [REPO.bazel files](/versions/8.6.0/rules/lib/globals/repo)
* [VENDOR.bazel files](/versions/8.6.0/rules/lib/globals/vendor)
* [WORKSPACE files](/versions/8.6.0/rules/lib/globals/workspace)

## [Configuration Fragments](/versions/8.6.0/rules/lib/fragments)

* [apple](/versions/8.6.0/rules/lib/fragments/apple)
* [bazel_android](/versions/8.6.0/rules/lib/fragments/bazel_android)
* [bazel_py](/versions/8.6.0/rules/lib/fragments/bazel_py)
* [coverage](/versions/8.6.0/rules/lib/fragments/coverage)
* [cpp](/versions/8.6.0/rules/lib/fragments/cpp)
* [j2objc](/versions/8.6.0/rules/lib/fragments/j2objc)
* [java](/versions/8.6.0/rules/lib/fragments/java)
* [objc](/versions/8.6.0/rules/lib/fragments/objc)
* [platform](/versions/8.6.0/rules/lib/fragments/platform)
* [proto](/versions/8.6.0/rules/lib/fragments/proto)
* [py](/versions/8.6.0/rules/lib/fragments/py)

## [Providers](/versions/8.6.0/rules/lib/providers)

* [AnalysisTestResultInfo](/versions/8.6.0/rules/lib/providers/AnalysisTestResultInfo)
* [CcInfo](/versions/8.6.0/rules/lib/providers/CcInfo)
* [CcToolchainConfigInfo](/versions/8.6.0/rules/lib/providers/CcToolchainConfigInfo)
* [CcToolchainInfo](/versions/8.6.0/rules/lib/providers/CcToolchainInfo)
* [ConstraintCollection](/versions/8.6.0/rules/lib/providers/ConstraintCollection)
* [ConstraintSettingInfo](/versions/8.6.0/rules/lib/providers/ConstraintSettingInfo)
* [ConstraintValueInfo](/versions/8.6.0/rules/lib/providers/ConstraintValueInfo)
* [DebugPackageInfo](/versions/8.6.0/rules/lib/providers/DebugPackageInfo)
* [DefaultInfo](/versions/8.6.0/rules/lib/providers/DefaultInfo)
* [ExecutionInfo](/versions/8.6.0/rules/lib/providers/ExecutionInfo)
* [FeatureFlagInfo](/versions/8.6.0/rules/lib/providers/FeatureFlagInfo)
* [file_provider](/versions/8.6.0/rules/lib/providers/file_provider)
* [FilesToRunProvider](/versions/8.6.0/rules/lib/providers/FilesToRunProvider)
* [IncompatiblePlatformProvider](/versions/8.6.0/rules/lib/providers/IncompatiblePlatformProvider)
* [InstrumentedFilesInfo](/versions/8.6.0/rules/lib/providers/InstrumentedFilesInfo)
* [java_compilation_info](/versions/8.6.0/rules/lib/providers/java_compilation_info)
* [java_output_jars](/versions/8.6.0/rules/lib/providers/java_output_jars)
* [JavaRuntimeInfo](/versions/8.6.0/rules/lib/providers/JavaRuntimeInfo)
* [JavaToolchainInfo](/versions/8.6.0/rules/lib/providers/JavaToolchainInfo)
* [ObjcProvider](/versions/8.6.0/rules/lib/providers/ObjcProvider)
* [OutputGroupInfo](/versions/8.6.0/rules/lib/providers/OutputGroupInfo)
* [PackageSpecificationInfo](/versions/8.6.0/rules/lib/providers/PackageSpecificationInfo)
* [PlatformInfo](/versions/8.6.0/rules/lib/providers/PlatformInfo)
* [ProguardSpecProvider](/versions/8.6.0/rules/lib/providers/ProguardSpecProvider)
* [ProtoRegistryProvider](/versions/8.6.0/rules/lib/providers/ProtoRegistryProvider)
* [RunEnvironmentInfo](/versions/8.6.0/rules/lib/providers/RunEnvironmentInfo)
* [TemplateVariableInfo](/versions/8.6.0/rules/lib/providers/TemplateVariableInfo)
* [ToolchainInfo](/versions/8.6.0/rules/lib/providers/ToolchainInfo)
* [ToolchainTypeInfo](/versions/8.6.0/rules/lib/providers/ToolchainTypeInfo)

## [Built-in Types](/versions/8.6.0/rules/lib/builtins)

* [Action](/versions/8.6.0/rules/lib/builtins/Action)
* [actions](/versions/8.6.0/rules/lib/builtins/actions)
* [apple_platform](/versions/8.6.0/rules/lib/builtins/apple_platform)
* [Args](/versions/8.6.0/rules/lib/builtins/Args)
* [Aspect](/versions/8.6.0/rules/lib/builtins/Aspect)
* [Attribute](/versions/8.6.0/rules/lib/builtins/Attribute)
* [bazel_module](/versions/8.6.0/rules/lib/builtins/bazel_module)
* [bazel_module_tags](/versions/8.6.0/rules/lib/builtins/bazel_module_tags)
* [BuildSetting](/versions/8.6.0/rules/lib/builtins/BuildSetting)
* [CcCompilationOutputs](/versions/8.6.0/rules/lib/builtins/CcCompilationOutputs)
* [CcLinkingOutputs](/versions/8.6.0/rules/lib/builtins/CcLinkingOutputs)
* [CompilationContext](/versions/8.6.0/rules/lib/builtins/CompilationContext)
* [configuration](/versions/8.6.0/rules/lib/builtins/configuration)
* [ctx](/versions/8.6.0/rules/lib/builtins/ctx)
* [depset](/versions/8.6.0/rules/lib/builtins/depset)
* [DirectoryExpander](/versions/8.6.0/rules/lib/builtins/DirectoryExpander)
* [DottedVersion](/versions/8.6.0/rules/lib/builtins/DottedVersion)
* [exec_result](/versions/8.6.0/rules/lib/builtins/exec_result)
* [ExecGroupCollection](/versions/8.6.0/rules/lib/builtins/ExecGroupCollection)
* [ExecGroupContext](/versions/8.6.0/rules/lib/builtins/ExecGroupContext)
* [ExecTransitionFactory](/versions/8.6.0/rules/lib/builtins/ExecTransitionFactory)
* [extension_metadata](/versions/8.6.0/rules/lib/builtins/extension_metadata)
* [Facts](/versions/8.6.0/rules/lib/builtins/Facts)
* [FeatureConfiguration](/versions/8.6.0/rules/lib/builtins/FeatureConfiguration)
* [File](/versions/8.6.0/rules/lib/builtins/File)
* [fragments](/versions/8.6.0/rules/lib/builtins/fragments)
* [java_annotation_processing](/versions/8.6.0/rules/lib/builtins/java_annotation_processing)
* [Label](/versions/8.6.0/rules/lib/builtins/Label)
* [LateBoundDefault](/versions/8.6.0/rules/lib/builtins/LateBoundDefault)
* [LibraryToLink](/versions/8.6.0/rules/lib/builtins/LibraryToLink)
* [License](/versions/8.6.0/rules/lib/builtins/License)
* [LinkerInput](/versions/8.6.0/rules/lib/builtins/LinkerInput)
* [LinkingContext](/versions/8.6.0/rules/lib/builtins/LinkingContext)
* [macro](/versions/8.6.0/rules/lib/builtins/macro)
* [mapped_root](/versions/8.6.0/rules/lib/builtins/mapped_root)
* [module_ctx](/versions/8.6.0/rules/lib/builtins/module_ctx)
* [path](/versions/8.6.0/rules/lib/builtins/path)
* [Provider](/versions/8.6.0/rules/lib/builtins/Provider)
* [repo_metadata](/versions/8.6.0/rules/lib/builtins/repo_metadata)
* [repository_ctx](/versions/8.6.0/rules/lib/builtins/repository_ctx)
* [repository_os](/versions/8.6.0/rules/lib/builtins/repository_os)
* [repository_rule](/versions/8.6.0/rules/lib/builtins/repository_rule)
* [root](/versions/8.6.0/rules/lib/builtins/root)
* [rule](/versions/8.6.0/rules/lib/builtins/rule)
* [rule_attributes](/versions/8.6.0/rules/lib/builtins/rule_attributes)
* [runfiles](/versions/8.6.0/rules/lib/builtins/runfiles)
* [struct](/versions/8.6.0/rules/lib/builtins/struct)
* [Subrule](/versions/8.6.0/rules/lib/builtins/Subrule)
* [subrule_ctx](/versions/8.6.0/rules/lib/builtins/subrule_ctx)
* [SymlinkEntry](/versions/8.6.0/rules/lib/builtins/SymlinkEntry)
* [tag_class](/versions/8.6.0/rules/lib/builtins/tag_class)
* [Target](/versions/8.6.0/rules/lib/builtins/Target)
* [TemplateDict](/versions/8.6.0/rules/lib/builtins/TemplateDict)
* [toolchain_type](/versions/8.6.0/rules/lib/builtins/toolchain_type)
* [ToolchainContext](/versions/8.6.0/rules/lib/builtins/ToolchainContext)
* [transition](/versions/8.6.0/rules/lib/builtins/transition)
* [wasm_exec_result](/versions/8.6.0/rules/lib/builtins/wasm_exec_result)
* [wasm_module](/versions/8.6.0/rules/lib/builtins/wasm_module)

## [Top-level Modules](/versions/8.6.0/rules/lib/toplevel)

* [apple_common](/versions/8.6.0/rules/lib/toplevel/apple_common)
* [attr](/versions/8.6.0/rules/lib/toplevel/attr)
* [cc_common](/versions/8.6.0/rules/lib/toplevel/cc_common)
* [config](/versions/8.6.0/rules/lib/toplevel/config)
* [config_common](/versions/8.6.0/rules/lib/toplevel/config_common)
* [coverage_common](/versions/8.6.0/rules/lib/toplevel/coverage_common)
* [java_common](/versions/8.6.0/rules/lib/toplevel/java_common)
* [native](/versions/8.6.0/rules/lib/toplevel/native)
* [platform_common](/versions/8.6.0/rules/lib/toplevel/platform_common)
* [proto](/versions/8.6.0/rules/lib/toplevel/proto)
* [proto_common](/versions/8.6.0/rules/lib/toplevel/proto_common)
* [testing](/versions/8.6.0/rules/lib/toplevel/testing)

## [Core Starlark data types](/versions/8.6.0/rules/lib/core)

* [bool](/versions/8.6.0/rules/lib/core/bool)
* [builtin_function_or_method](/versions/8.6.0/rules/lib/core/builtin_function_or_method)
* [dict](/versions/8.6.0/rules/lib/core/dict)
* [float](/versions/8.6.0/rules/lib/core/float)
* [function](/versions/8.6.0/rules/lib/core/function)
* [int](/versions/8.6.0/rules/lib/core/int)
* [json](/versions/8.6.0/rules/lib/core/json)
* [list](/versions/8.6.0/rules/lib/core/list)
* [range](/versions/8.6.0/rules/lib/core/range)
* [set](/versions/8.6.0/rules/lib/core/set)
* [string](/versions/8.6.0/rules/lib/core/string)
* [tuple](/versions/8.6.0/rules/lib/core/tuple)